@@ -1,74 +1,74 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 0,
+  "uniques": 0,
   "views": [
     {
-      "timestamp": "2026-01-23T00:00:00Z",
+      "timestamp": "2026-02-11T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2026-01-25T00:00:00Z",
+      "timestamp": "2026-02-12T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-26T00:00:00Z",
+      "timestamp": "2026-02-13T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-27T00:00:00Z",
+      "timestamp": "2026-02-14T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-28T00:00:00Z",
+      "timestamp": "2026-02-15T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-29T00:00:00Z",
+      "timestamp": "2026-02-16T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-30T00:00:00Z",
+      "timestamp": "2026-02-17T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-31T00:00:00Z",
+      "timestamp": "2026-02-18T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-02-01T00:00:00Z",
+      "timestamp": "2026-02-19T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-02-02T00:00:00Z",
+      "timestamp": "2026-02-20T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-02-03T00:00:00Z",
+      "timestamp": "2026-02-21T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-02-04T00:00:00Z",
+      "timestamp": "2026-02-22T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-02-05T00:00:00Z",
+      "timestamp": "2026-02-23T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-24T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
